# HPLT-textpipes

./: .gitignore  LUMI.md  README.md  TOOLS.md  pyproject.toml  remove_doc_ids.sh
data_website/: index.html
data_website/monotext/: af_map.txt  ar_map.txt  az_map.txt  be_map.txt  bg_map.txt  bn_map.txt  ca_map.txt  cs_map.txt  cy_map.txt  da_map.txt  de_map.txt  el_map.txt  en_map.txt  eo_map.txt  es_map.txt  et_map.txt  eu_map.txt  fa_map.txt  fi_map.txt  fr_map.txt  ga_map.txt  gl_map.txt  gu_map.txt  hbs_map.txt  he_map.txt  hi_map.txt  hplt_monolingual_map_all_1.txt  hu_map.txt  hy_map.txt  id_map.txt  is_map.txt  it_map.txt  ja_map.txt  ka_map.txt  kk_map.txt  kn_map.txt  ko_map.txt  ky_map.txt  la_map.txt  lt_map.txt  (+36 more)
download/cc/: cc_list_latest.txt  cc_list_latest_download.sh  download_crawl_rclone.sh  get_url_lists.sh
filter/: duplicates.py  duplicates.slurm  filter.py  filter.slurm  identify.slurm  ids.slurm  merge.py  test.slurm
package/: bin.slurm  filter_domains.sh  jsonl.c  merge.py  merge.slurm  pack.slurm  prepare.py  skip.slurm  sort.slurm  split.slurm  trickle  xml2md.py
src/: run-wds.py
threeone/stage3run/: cmp_module.sh  monitor_load.sh  recompress2multiframe.sh  shorten.txt  stagecc.sh  temp_size.sh  (+3 more)
tools/: LUMI.md  README_placeholder.md  TOOLS.md  bin.slurm  extract.slurm  extract_large.slurm  four_pool_count_lines_and_chars.py  four_pool_counting.slurm  generate_HF_readme.py  generate_maps.sh  generate_maps2.sh  identify.slurm  markup.slurm  merge_labels.sh  merge_pool_stats.py  morsel.slurm  pool.slurm  remove_doc_ids.py  shard.py  shard.slurm  smart_rename.py  zstdconcat  zstdconcat.py  zstdconcat.sh
(+37 files in other folders)
