[build-system]
requires = [
    "setuptools==65.5.0",
        "setuptools-scm==7.1.0"]
build-backend = "setuptools.build_meta"

# using setuptools_scm results in including all resource files tracked by git (e.g. mt-filter-list.annotated)
[tool.setuptools_scm]

[project]
name = "hplt-textpipes"
dynamic = ["version"]  # setuptools_scm will use the version received from git
requires-python = ">= 3.10"

dependencies = [
    "trafilatura==2.0.0",
    "lxml>=5.3.1",
    "lxml-html-clean==0.1.0",
    "ujson==5.4.0",
    "zstandard==0.22.0",
    "fire",
    "numpy==1.23.5",
    "fasttext==0.9.3",
    "prtpy==0.8.3"
]

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default

[tool.setuptools]
script-files = [
    "src/hplt_textpipes/stage2/qualitycontrol/stage2traferrstats.sh",
    "src/hplt_textpipes/stage2/stage2traf.sh",
    "src/hplt_textpipes/stage2/stage2local.sh",
    "src/hplt_textpipes/stage2/stage2nodeparallel.sh",
    "src/hplt_textpipes/stage2/stage2download.sh",
    "src/hplt_textpipes/stage2/stage2nodeparallel_batched.sh",
    "src/hplt_textpipes/stage2/stage2local_batch.sh",
    "src/hplt_textpipes/stage2/stage2stagelumio.sh",
    "src/hplt_textpipes/stage2/stage2stage.sh",
    "src/hplt_textpipes/stage3/stage3download.sh",

    #    "src/hplt_textpipes/stage1/generate_tasks.sh",
#    "src/hplt_textpipes/stage1/run_warc2html_local.sh",
#    "src/hplt_textpipes/stage1/run_warc2html_remote.sh",
#    "src/hplt_textpipes/stage1/run_warc2html_task.sh",
#    "src/hplt_textpipes/stage1/url-filter-list.optimised"
]

